--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --tertiary: #ae97ca;
+  --secondary: #ae97ca;
+}
 body {
   background-color: #1e1e2e;
   color: #bd93f9;
@@ -18,4 +22,21 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 13px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border: 3px solid var(--primary);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--tertiary);
 }
